--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Battleground.Battleground
+GameDefaultMap=/Game/MainMenu.MainMenu
 EditorStartupMap=/Game/Battleground.Battleground
 GlobalDefaultGameMode=/Game/Blueprints/Fannon_Codder_GameModeBP.Fannon_Codder_GameModeBP_C
 
