--- a/Fannon_Codder.uproject
+++ b/Fannon_Codder.uproject
@@ -7,7 +7,11 @@
 		{
 			"Name": "Fannon_Codder",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine",
+				"AIModule"
+			]
 		}
 	]
 }
